--- a/vignettes/articles/Bikesharing-Decomposition-Example.Rmd
+++ b/vignettes/articles/Bikesharing-Decomposition-Example.Rmd
@@ -77,7 +77,7 @@ t1 <- Sys.time()
 rp <- rpf(
   bikers ~ day + hr + temp + windspeed + workingday + hum + weathersit + season,
   data = bike,
-  max_interaction = 3, ntrees = 20
+  max_interaction = 3, ntrees = 50
 )
 
 purify(rp)
@@ -118,13 +118,13 @@ p_main + plot_layout(widths = c(.3, .3, .4))
 ## 2-Way Interactions
 
 ```{r twoway-effects}
-p_2way <- (
-    plot_twoway_effects(components, c("workingday", "temp")) /
-    plot_twoway_effects(components, c("hr", "workingday")) + 
+p_2way1 <- plot_twoway_effects(components, c("workingday", "temp"))
+p_2way2 <- plot_twoway_effects(components, c("hr", "workingday"))
+p_2way3 <- plot_twoway_effects(components, c("hr", "temp"))
+
+p_2way <- (p_2way1 / p_2way2 + 
     plot_layout(guides = "collect") &
-      theme(legend.position = "bottom")
-  ) |
-  plot_twoway_effects(components, c("hr", "temp"))
+      theme(legend.position = "bottom")) | p_2way3
 
 p_2way <- p_2way + 
   plot_annotation(tag_levels = list(c("1,2", "3,1", "3,3")), tag_prefix = "m(", tag_suffix = ")")
@@ -162,7 +162,7 @@ From here we use `autoplot` for convenience. Internally it just passes its argum
 
 ```{r}
 autoplot(components, c("season", "workingday"))
-autoplot(components, c("season", "temp"))
+autoplot(components, c("season", "hr"))
 autoplot(components, c("season", "weathersit"))
 autoplot(components, c("weathersit", "temp"))
 autoplot(components, c("hum", "temp"))
