Rename extract_components -> predict_components

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,11 +51,11 @@ predict(rpfit, new_data = mtcars) |>
   head()
 ```
 
-Prediction components can be accessed via `extract_components`, including the intercept, main effects, and interactions up to a specified degree.
+Prediction components can be accessed via `predict_components`, including the intercept, main effects, and interactions up to a specified degree.
 The returned object also contains the original data as `x`, which is required for visualization.
 
 ```{r}
-components <- extract_components(rpfit, new_data = mtcars) 
+components <- predict_components(rpfit, new_data = mtcars) 
 
 str(components)
 ```
