--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ predict(rpfit, new_data = mtcars) |>
 
 Prediction components can be accessed via `predict_components`, including the intercept, main effects, and interactions up to a specified degree.
 The returned object also contains the original data as `x`, which is required for visualization.
-Alternative, the `glex` package can be used, but `glex(rpfit)` would yield the same result.
+The `glex` package can be used as well: `glex(rpfit)` yields the same result.
 
 ```{r}
 components <- predict_components(rpfit, new_data = mtcars) 
@@ -61,7 +61,7 @@ components <- predict_components(rpfit, new_data = mtcars)
 str(components)
 ```
 
-Various visualization options are available vai `glex`, e.g. for main and second-order interaction effects:
+Various visualization options are available via `glex`, e.g. for main and second-order interaction effects:
 
 ```{r}
 # install glex if not available:
